--- a/ansible-playbooks/roles/aws-ena/tasks/main.yml
+++ b/ansible-playbooks/roles/aws-ena/tasks/main.yml
@@ -3,8 +3,10 @@
   shell: 'modinfo ena | grep -i "^version:" | grep -Po "(?:(\d+)\.)?(?:(\d+)\.)?(\*|\d+)"'
   register: current_ena_version
   ignore_errors: true 
+  
+- debug: var=current_ena_version
 
-- name: "Install aws ena version {{ aws_ena_version }}"
-  include_tasks: install_ena.yml
-  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
+#- name: "Install aws ena version {{ aws_ena_version }}"
+# include_tasks: install_ena.yml
+# when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
   
