changes has been made for current playbook

--- a/ansible-playbooks/roles/aws-ena/tasks/main.yml
+++ b/ansible-playbooks/roles/aws-ena/tasks/main.yml
@@ -6,7 +6,7 @@
   
 - debug: var=current_ena_version.stdout
 
-#- name: "Install aws ena version {{ aws_ena_version }}"
-# include_tasks: install_ena.yml
-# when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
+- name: "Install aws ena version {{ aws_ena_version }}"
+  include_tasks: install_ena.yml
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
   
