--- a/ansible-playbooks/roles/aws-ena/tasks/install_ena.yml
+++ b/ansible-playbooks/roles/aws-ena/tasks/install_ena.yml
@@ -4,6 +4,7 @@
   yum:
     name: "{{ item }}"
     state: present
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
   with_items:
     - kernel-debug-devel
     - kernel-devel
@@ -12,27 +13,35 @@
 
 - name: Clone nexus source
   shell: "curl -O -k 'https://nexuxlink' /tmp/amzn-drivers-{{ aws_ena_version }}"
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
 - name: untar binaries 
   shell: "tar -xvf /tmp/amzn-drivers-{{ aws_ena_version }} /usr/src/amzn-drivers-{{ aws_ena_version }}"
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
-- name: removing old versions of ena drivers
-  shell: "for i in `dkms status | grep -o -P '(?<=amzn-drivers, ).*(?=: added)'`; do dkms remove amzn-drivers/$i --all; /bin/rm -R /usr/src/amzn-drivers-$i; /bin/rm -R /var/lib/dkms/amzn-drivers/$i; done" 
-  ignore_errors: true
-  register: remove_oldversion
+# - name: removing old versions of ena drivers
+#   shell: "for i in `dkms status | grep -o -P '(?<=amzn-drivers, ).*(?=: added)'`; do dkms remove amzn-drivers/$i --all; /bin/rm -R /usr/src/amzn-drivers-$i; /bin/rm -R /var/lib/dkms/amzn-drivers/$i; done" 
+#   ignore_errors: true
+#   register: remove_oldversion
 
-- name: remove /var/lib/dkms/amzn-drivers/ 
-  shell: "ls -d /usr/src/amzn-drivers* | grep -v 2.6.0"
-  register: get_old_drivers 
+- name: grep - remove /usr/src
+  shell: "ls -d /usr/src/amzn-drivers* | grep -v {{ aws_ena_version }}"
+  register: get_old_drivers
 
-- shell: "rm -rf {{ item }}"
-  with_items: "{{ get_old_drivers.stdout }}"
+- debug:
+    msg: "{{ get_old_drivers }}"
 
-- shell: "ls -ltr /var/lib/dkms/amzn-drivers/| awk ‘{print $NF}’ | grep -v 2.6.0 | grep -v original_module"
+- name: remove /usr/src versions 
+  shell: "rm -rf {{ item }}"
+  with_items: "{{ get_old_drivers.stdout_lines }}"
+
+- name: grep /var/lib/dkms/amzn-drivers/
+  shell: "ls -ltr /var/lib/dkms/amzn-drivers/| awk ‘{print $NF}’ | grep -v {{ aws_ena_version }} | grep -v `uname -r` | grep -v original_module"
   register: get_old_var_lib 
 
-- shell: " rm -rf {{ item }}"
-  with_items: "{{ get_old_var_lib.stdout }}"
+- name: remove /var/lib
+  shell: " rm -rf {{ item }}"
+  with_items: "{{ get_old_var_lib.stdout_lines }}"
 
 #- name: removing old versions of ena drivers
 #  shell: "for i in `dkms status | grep -o -P '(?<=amzn-drivers, ).*(?=: added)'`;do echo \"dkms remove amzn-drivers/$i --all; /bin/rm -r /usr/src/amzn-drivers-$i; /bin/rm -r /var/lib/dkms/amzn-drivers/$i\"; done"
@@ -45,18 +54,23 @@
   template:
     src: dkms.conf.j2
     dest: "/usr/src/amzn-drivers-{{ aws_ena_version }}/dkms.conf"
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
 - name: Add module to DKMS
   command: "dkms add -m amzn-drivers -v {{ aws_ena_version}}"
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
 - name: Build module
   command: "dkms build -m amzn-drivers -v {{ aws_ena_version}}"
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
 - name: Install module
   command: "dkms install -m amzn-drivers -v {{ aws_ena_version}}"
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
 - name: Load modules
   shell: dracut -f -v
+  when: current_ena_version.stdout is defined and (current_ena_version.stdout < aws_ena_version)
 
 - name: check dkms status
   shell: dkms status
